[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-post"
version = "1.0.0"
description = "Publish articles to multiple platforms with one command"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Alex-2Code", email = "alex@example.com"}
]
keywords = ["blog", "publish", "wechat", "juejin", "csdn", "zhihu", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "markdown>=3.5",
    "python-frontmatter>=1.0.0",
]

[project.scripts]
multi-post = "multi_post.cli:main"

[project.urls]
Homepage = "https://github.com/Alex-2Code/multi-post"
Repository = "https://github.com/Alex-2Code/multi-post"
Issues = "https://github.com/Alex-2Code/multi-post/issues"
